# Path-Tracing

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
Path-Tracing/: Application.cpp  Application.h  AssetImporter.cpp  AssetImporter.h  AssetManager.cpp  AssetManager.h  CMakeLists.txt  ExampleScenes.cpp  ExampleScenes.h  MaterialSystem.cpp  MaterialSystem.h  Resources.cpp  Resources.h  Scene.cpp  Scene.h  SceneGraph.cpp  SceneGraph.h  SceneImporter.cpp  SceneImporter.h  SceneManager.cpp  SceneManager.h  TextureImporter.cpp  TextureImporter.h  UIComponents.cpp  UIComponents.h  UserInterface.cpp  UserInterface.h  Window.cpp  Window.h  main.cpp
Path-Tracing-Tests/: BsdfTest.cpp  CMakeLists.txt  PaddingTest.cpp  ShadingTest.cpp  TestApplication.cpp  TestCommon.h  TestData.h  TestEnvironment.cpp  TestEnvironment.h  TestRenderer.cpp  TestRenderer.h  main.cpp
Path-Tracing-Tests/Shaders/: BsdfTestShaderTypes.incl  ShadingTestShaderTypes.incl  TestShaderTypes.incl  testBsdf.comp  testCommon.glsl  testPadding.comp  testShading.comp
Path-Tracing/Core/: Cache.h  Camera.cpp  Camera.h  Config.cpp  Config.h  Core.cpp  Core.h  Input.cpp  Input.h  Registry.h  Threads.h
Path-Tracing/Renderer/: AccelerationStructure.cpp  AccelerationStructure.h  Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  DescriptorSet.cpp  DescriptorSet.h  DeviceContext.cpp  DeviceContext.h  Frame.cpp  Frame.h  Image.cpp  Image.h  LogicalDevice.cpp  LogicalDevice.h  OutputSaver.cpp  OutputSaver.h  PhysicalDevice.cpp  PhysicalDevice.h  Pipeline.cpp  Pipeline.h  Renderer.cpp  Renderer.h  ShaderBindingTable.cpp  ShaderBindingTable.h  ShaderLibrary.cpp  ShaderLibrary.h  StagingBuffer.cpp  StagingBuffer.h  Swapchain.cpp  Swapchain.h  TextureUploader.cpp  TextureUploader.h  Utils.h
Path-Tracing/Shaders/: ShaderRendererTypes.incl  ShaderTypes.incl  anyhit.rahit  bloomDownsample.comp  bloomUpsample.comp  bsdf.glsl  closestHit.rchit  closesthit.rchit  common.glsl  compile.bat  composition.comp  material.glsl  metalicRoughness.rchit  metallicRoughness.rchit  miss.rmiss  occlusion.rmiss  occlusionAnyhit.rahit  postprocess.comp  ray.glsl  raygen.rgen  sampling.glsl  shading.glsl  skinning.comp  solidColor.rchit  specularGlossiness.rchit  textured.rchit  toneMapping.comp  tracing.glsl  uiComposition.comp
Path-Tracing/Shaders/Debug/: DebugShaderRendererTypes.incl  DebugShaderTypes.incl  debug.glsl  debugAnyhit.rahit  debugClosestHit.rchit  debugMetalicRoughness.rchit  debugMiss.rmiss  debugRaygen.rgen  debugSolidColor.rchit  debugSpecularGlossiness.rchit  debugTextured.rchit
cmake/: ConfigureVulkan.cmake  DownloadAssets.cmake  Utils.cmake
